CHANGES
=======

1.9.1

FIX: Add missed doc about group role assigment
FIX: Expose group role assignment API

1.9.0

FIX: Remove legacy endpoints: IoTA and CA
FEATURE: Remove uwsgi stats: takes too much time

1.8.0

FEATURE: LDAP support for user management

1.7.0

FEATURE: Unify uwsgi configuration (docker, SaaS)
FEATURE: Add option to enable or disable extended metrics (experimental). Disabled by default
FEATURE: update docker to centos7
FEATURE: Check domain_name at delete service and raise exception if is not found
FEATURE: Log in debug level all requests with codes > 400 and < 500
FIX: Init orchestrator_core logger with empty values for startup errors

1.6.0

FIX: return policy into results of get PolicyFromRole [#97]
FIX: typo in status returned by delete metrics

1.5.3

FEATURE: update uwsgi version to 2.0.15
FIX: catch error disabling and deleting service when create service fails [#90]
FEATURE: duplicate number of procesing resources
FIX: error trace reported when metrics are trying to calculate error response size [#84]
FIX: replace error by warn trace when trying to remove elements in third parties [#83]
FIX: set pepperseo conf after perseo conf in docker [#82]
FEATURE: allow non positional args in docker entrypoint [#78]

1.5.2

FIX: get project detail with scoped token

1.5.1

FIX: Perseo expected port in docker

1.5.0

FEATURE: Metrics API [#58]
FEATURE: Support keystone groups in a Service, including role assignments [#56]
FIX: Add pagination to list orion subscriptions [#37]

1.4.5

FIX: Perseo expected port in docker

1.4.4

FIX: Fix dependencies version to a fixed version

1.4.3

FIX: Add pagination to list orion subscriptions [#37]

1.4.2

FEATURE: get_version_string extended to include release information


1.4.1

FIX: django trace logs


1.4.0

FEATURE: Remove perseo rules when service or subservice is deleted - issue 24
FIX: Notifypath not handled by docker orchestrator conf - issue 42


1.3.0

task/get_current_log_level
task/align_log_format