@@ -1,6 +1,8 @@
 CHANGES
 =======
 
+FIX: check metrics conf before collect metrics from requester API handler
+
 1.9.1
 
 FIX: Add missed doc about group role assigment
